change: some code at notification
